# deeppowers

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: system-architecture.mermaid
cmake/: deeppowers-config.cmake.in
docs/: architecture.md  principles.md  system-architecture.mermaid  userguide.md
examples/: CMakeLists.txt  advanced_features.cpp  basic_generation.cpp  batch_generation.cpp  optimize_and_benchmark.py  performance_benchmark.cpp  python_example.py  quantization_example.cpp  stream_generation.cpp  tokenizer_gpu_test.cpp
scripts/: README.md  batch_process.py  benchmark.py  build.sh  memory_monitor.py  preprocess.py  requirements.txt  run.sh  test.sh
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/api/cpp/: CMakeLists.txt  deeppowers.pc.in
src/api/cpp/include/: deeppowers.hpp
src/api/cpp/src/: deeppowers.cpp
src/api/python/: CMakeLists.txt  README.md  setup.py
src/api/python/deeppowers/: __init__.py  bindings.cpp  model.py  pipeline.py  tokenizer.py
src/api/python/deeppowers/cpp/: bindings.cpp
src/api/rest/handlers/: generate_handler.cpp
src/api/rest/middleware/: auth_middleware.cpp  auth_middleware.hpp  error_middleware.cpp  error_middleware.hpp  logging_middleware.cpp  logging_middleware.hpp  monitoring_middleware.cpp  monitoring_middleware.hpp  rate_limit_middleware.cpp  rate_limit_middleware.hpp
src/api/rest/routes/: generate_routes.cpp  generate_routes.hpp
src/common/: CMakeLists.txt  error.hpp  logging.cpp  logging.hpp  utils.cpp  utils.hpp
src/common/include/: utils.hpp
src/core/: CMakeLists.txt
src/core/api/: api_server.cpp  api_server.hpp  client_sdk.cpp  client_sdk.hpp  deeppowers.proto  grpc_server.cpp  grpc_server.hpp  http_server.cpp  http_server.hpp
src/core/batching/: batch.cpp  batch.hpp  batching_engine.cpp  batching_engine.hpp
src/core/config/: config_manager.cpp  config_manager.hpp
src/core/distributed/: distributed_context.cpp  distributed_context.hpp  distributed_executor.cpp  distributed_executor.hpp
src/core/execution/: execution_engine.cpp  execution_engine.hpp  model.cpp  model.hpp
src/core/execution/models/: gpt_kernels.cu  gpt_kernels.hpp  gpt_model.cpp  gpt_model.hpp  gpt_weights.cpp  gpt_weights.hpp  quantization_kernels.cu  quantization_kernels.cuh  quantization_manager.cpp  quantization_manager.hpp  quantization_manager_perf_test.cpp  quantization_manager_resource_test.cpp  quantization_manager_test.cpp
src/core/graph/: graph_compiler.cpp  graph_compiler.hpp  graph_kernels.cu  graph_kernels.cuh  graph_utils.cpp  graph_utils.hpp
src/core/hal/: hal.hpp
src/core/hal/cuda/: cuda_device.cpp  cuda_device.hpp  cuda_kernel.cpp  cuda_kernel.hpp  cuda_stream.cpp  cuda_stream.hpp  cuda_tensor.cpp  cuda_tensor.hpp
src/core/hal/rocm/: rocm_device.cpp  rocm_device.hpp  rocm_kernel.cpp  rocm_kernel.hpp  rocm_stream.cpp  rocm_stream.hpp
src/core/include/inference/: inference.hpp
src/core/include/model/: model.hpp
src/core/include/tokenizer/: tokenizer.hpp
src/core/inference/: auto_tuner.cpp  auto_tuner.hpp  inference.cpp  inference_engine.cpp  inference_engine.hpp  inference_optimizer.cpp  inference_optimizer.hpp
src/core/memory/: memory_pool.cpp  memory_pool.hpp
src/core/model/: model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  model_types.hpp  onnx_loader.cpp  onnx_loader.hpp  pytorch_loader.cpp  pytorch_loader.hpp  quantization.cpp  quantization.hpp  tensor.cpp  tensor.hpp  tensorflow_loader.cpp  tensorflow_loader.hpp  weight_manager.cpp  weight_manager.hpp
src/core/models/: gpt_model.cpp  gpt_model.hpp
src/core/monitoring/: monitor.cpp  monitor.hpp
src/core/postprocessing/: postprocessing_kernels.cu  postprocessing_kernels.cuh  postprocessor.cpp  postprocessor.hpp
src/core/preprocessing/: preprocessing_kernels.cu  preprocessing_kernels.cuh  preprocessor.cpp  preprocessor.hpp
src/core/request_queue/: request.cpp  request.hpp  request_queue.cpp  request_queue.hpp
src/core/scheduling/: scheduler.cpp  scheduler.hpp
src/core/tokenizer/: bpe.cpp  bpe.hpp  text_processor.cpp  text_processor.hpp  tokenizer.cpp  tokenizer.hpp  tokenizer_kernels.cu  tokenizer_kernels.cuh  vocab_manager.cpp  vocab_manager.hpp  vocab_merger.cpp  vocab_merger.hpp  wordpiece.cpp  wordpiece.hpp
src/core/utils/: memory_pool.cpp  memory_pool.hpp  string_pool.cpp  string_pool.hpp  thread_pool.cpp  thread_pool.hpp
tests/: CMakeLists.txt  test_config.cpp  test_generation.cpp  test_model.cpp  test_quantization.cpp  test_utils.cpp
tests/data/: sample.txt
